@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-07-16T01:14:51Z",
+  "timestamp" : "2025-07-16T12:31:38Z",
   "count_outdated" : 5127,
   "uniques_outdated" : 2769,
-  "count" : 5190,
-  "uniques" : 2822,
+  "count" : 5191,
+  "uniques" : 2823,
   "clones" : [
     {
       "timestamp": "2025-07-02T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 2,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-03T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
